# docs/openapi.yaml
@@ -691,6 +691,30 @@ paths:
       - Admin API
       security:
       - AdminToken: []
+  /admin/v1/channels/{channel_id}:
+    delete:
+      summary: Delete Admin Channel
+      operationId: delete_admin_channel_admin_v1_channels__channel_id__delete
+      parameters:
+      - name: channel_id
+        in: path
+        required: true
+        schema:
+          type: string
+          title: Channel Id
+      responses:
+        '204':
+          description: Successful Response
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
+      tags:
+      - Admin API
+      security:
+      - AdminToken: []
 components:
   schemas:
     BatchCreateMessageItem:
